--- a/config/machines/levante/catalog/ICON/ngc3028.yaml
+++ b/config/machines/levante/catalog/ICON/ngc3028.yaml
@@ -1,7 +1,7 @@
 sources:
   PT30M:
     args:
-      chunks: null
+      #chunks: null
       consolidated: true
       urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT30M_{{ zoom }}.zarr
     driver: zarr
@@ -24,7 +24,7 @@ sources:
         type: int
   PT3H:
     args:
-      chunks: null
+      #chunks: null
       consolidated: true
       urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT3H_{{ zoom }}.zarr
     driver: zarr
@@ -47,7 +47,7 @@ sources:
         type: int
   P1D:
     args:
-      chunks: null
+      #chunks: null
       consolidated: true
       urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_P1D_{{ zoom }}.zarr
     driver: zarr
