lumi catalog for era5 sample

--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -43,6 +43,11 @@ source_grids:
       original_2d:
         path: ../AQUA_tests_short/grids/tco79_grid.nc
         space_coord: ["rgrid"]
+  ERA5:
+    fdb:
+      default:
+        path: /users/jvonhar/work/aqua/grids/era5.sample.grib
+        space_coord: ["lon", "lat"]
 
 
 
