--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,4 +9,4 @@ reader:
 
 cdo:
   levante: /sw/spack-levante/cdo-2.0.6-jkuh4i/bin/cdo
-  lumi: /scratch/project_465000454/devaraju/SW/LUMI-22.08/C/python-xarray/bin/cdo
+  lumi: /users/jvonhar/mambaforge/aqua/bin/cdo
