--- a/config/machines/lumi/catalog/ERA5/fdb.yaml
+++ b/config/machines/lumi/catalog/ERA5/fdb.yaml
@@ -1,13 +1,13 @@
 sources:
-    monthly:
+    fdb-test:
         args:
             request:
                 levtype: "sfc"
-                date: 20010401/to/20010501
+                date: 20050401/to/20050405
                 time: 0000/to/1800/by/0600
                 step: "0"
-                param: [2t]
-            step: 'M'
-        description: ''
+                param: [2t, tp]
+            step: 'H'
+        description: 'Test FDB data'
         driver: gsv
         #metadata: {step: 'M'}
