--- a/environment.yml
+++ b/environment.yml
@@ -32,7 +32,7 @@ dependencies:
   - pytest
   - pytest-cov
   - coverage[toml]
-  - pycobertura
+  - pandoc
 # these below are only required for documentation
   - sphinx
   - sphinx-rtd-theme
