Catalogues of ERA5 and MSWEP are updated

--- a/config/levante/catalog/ERA5/main.yaml
+++ b/config/levante/catalog/ERA5/main.yaml
@@ -4,3 +4,9 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/era5.yaml"
+
+  daily:
+    description: daily ERA5 data
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/daily.yaml"
