--- a/config/levante/catalog/ERA5/era5.yaml
+++ b/config/levante/catalog/ERA5/era5.yaml
@@ -3,7 +3,25 @@ plugins:
     - module: intake_xarray
     - module: gribscan
 
+
 sources:
+  daily-tp:
+    description: tp daily, ERA5 data
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/scratch/b/b382267/ERA5/sf/fc/1D/228/Grouped/228.json
+
+  daily-t2m:
+    description: t2m daily, ERA5 data
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/scratch/b/b382267/ERA5/sf/an/1D/167/GroupedZ/167.json
+
+
   monthly_inst:
       driver: intake_esm.esm_datastore
       args:
