--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ tests = [
     "pytest==7.3.*",
     "pytest-cov==4.0.*",
     "coverage[toml]==7.2.*",
+    "pycobertura==3.0.*"
 ]
 all = [
     "aqua[tests]",
