--- a/config/levante/catalog/MSWEP/3hourly.yaml
+++ b/config/levante/catalog/MSWEP/3hourly.yaml
@@ -3,35 +3,357 @@ plugins:
     - module: intake_xarray
 
 sources:
-  1979-1989:
-    description: 3hourly MSWEP_V280 data from 1979 to 1989
+  y1979:
+    description: 3hourly MSWEP_V280 data for 1979
     driver: zarr
     args:
       consolidated: False
       urlpath: 
-      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByRange/1979_1989.json 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1979.json 
 
-
-  1990-1999:
-    description: 3hourly MSWEP_V280 data from 1990 to 1999
+  y1980:
+    description: 3hourly MSWEP_V280 data for 1980
     driver: zarr
     args:
       consolidated: False
       urlpath: 
-      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByRange/1990_1999.json 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1980.json 
 
-  2000-2009:
-    description: 3hourly MSWEP_V280 data from 2000 to 2009
+  y1981:
+    description: 3hourly MSWEP_V280 data for 1981
     driver: zarr
     args:
       consolidated: False
       urlpath: 
-      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByRange/2000_2009.json 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1981.json 
 
-  2010-2020:
-    description: 3hourly MSWEP_V280 data from 2010 to 2020
+
+  y1982:
+    description: 3hourly MSWEP_V280 data for 1982
     driver: zarr
     args:
       consolidated: False
       urlpath: 
-      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByRange/2010_2020.json 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1982.json 
+
+  y1983:
+    description: 3hourly MSWEP_V280 data for 1983
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1983.json 
+
+  y1984:
+    description: 3hourly MSWEP_V280 data for 1984
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1984.json 
+
+  y1985:
+    description: 3hourly MSWEP_V280 data for 1985
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1985.json 
+
+  y1986:
+    description: 3hourly MSWEP_V280 data for 1986
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1986.json 
+
+
+  y1987:
+    description: 3hourly MSWEP_V280 data for 1987
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1987.json 
+
+  y1988:
+    description: 3hourly MSWEP_V280 data for 1988
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1988.json 
+
+
+  y1989:
+    description: 3hourly MSWEP_V280 data for 1989
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1989.json 
+
+
+  y1990:
+    description: 3hourly MSWEP_V280 data for 1990
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1990.json 
+
+  y1991:
+    description: 3hourly MSWEP_V280 data for 1991
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1991.json 
+
+
+  y1992:
+    description: 3hourly MSWEP_V280 data for 1992
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1992.json
+
+  y1993:
+    description: 3hourly MSWEP_V280 data for 1993
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1993.json  
+
+  
+  y1994:
+    description: 3hourly MSWEP_V280 data for 1994
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1994.json 
+
+  y1995:
+    description: 3hourly MSWEP_V280 data for 1995
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1995.json 
+
+
+  y1996:
+    description: 3hourly MSWEP_V280 data for 1996
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1996.json 
+
+  y1997:
+    description: 3hourly MSWEP_V280 data for 1997
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1997.json 
+
+
+  y1998:
+    description: 3hourly MSWEP_V280 data for 1998
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1998.json 
+
+  y1999:
+    description: 3hourly MSWEP_V280 data for 1999
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1999.json 
+
+  y2000:
+    description: 3hourly MSWEP_V280 data for 2000
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2000.json 
+
+
+  y2001:
+    description: 3hourly MSWEP_V280 data for 2001
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2001.json 
+
+  y2002:
+    description: 3hourly MSWEP_V280 data for 2002
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2002.json 
+
+  y2003:
+    description: 3hourly MSWEP_V280 data for 2003
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2003.json 
+
+  y2004:
+    description: 3hourly MSWEP_V280 data for 2004
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2004.json 
+
+  y2005:
+    description: 3hourly MSWEP_V280 data for 2005
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2005.json 
+
+
+  y2006:
+    description: 3hourly MSWEP_V280 data for 2006
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2006.json 
+
+
+  y2007:
+    description: 3hourly MSWEP_V280 data for 2007
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2007.json 
+
+
+  y2008:
+    description: 3hourly MSWEP_V280 data for 2008
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2008.json 
+
+  y2009:
+    description: 3hourly MSWEP_V280 data for 2009
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2009.json 
+
+  y2010:
+    description: 3hourly MSWEP_V280 data for 2010
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2010.json 
+
+  y2011:
+    description: 3hourly MSWEP_V280 data for 2011
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2011.json 
+
+  y2012:
+    description: 3hourly MSWEP_V280 data for 2012
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2012.json 
+
+  y2013:
+    description: 3hourly MSWEP_V280 data for 2013
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2013.json 
+
+  y2014:
+    description: 3hourly MSWEP_V280 data for 2014
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2014.json 
+
+
+  y2015:
+    description: 3hourly MSWEP_V280 data for 2015
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2015.json 
+
+
+  y2016:
+    description: 3hourly MSWEP_V280 data for 2016
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2016.json 
+
+  y2017:
+    description: 3hourly MSWEP_V280 data for 2017
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2017.json 
+
+  y2018:
+    description: 3hourly MSWEP_V280 data for 2018
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2018.json 
+
+  y2019:
+    description: 3hourly MSWEP_V280 data for 2019
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2019.json 
+
+
+  y2020:
+    description: 3hourly MSWEP_V280 data for 2020
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: 
+      - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2020.json 
+
+
+  
+
