--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies = [
     "xarray",
     "smmregrid",
     "one_pass@git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git",
-    "pyfdb@git+https://github.com/ecmwf/pyfdb.git",
+    "pyfdb@git+https://github.com/ecmwf/pyfdb.git@master",
     "gsv_interface@git+https://oauth2:NrMi_dshtmNeaWy9F3sz@earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface.git@add_packaging"
 ]
 
