description of variables is updated

--- a/config/levante/catalog/ERA5/daily.yaml
+++ b/config/levante/catalog/ERA5/daily.yaml
@@ -6,7 +6,7 @@ plugins:
 
 sources:
   tp:
-    description: tp daily, ERA5 data
+    description: tp-daily (228), total precipitation, ERA5 data
     driver: zarr
     args:
       consolidated: False
@@ -14,7 +14,7 @@ sources:
       - reference::/scratch/b/b382267/ERA5/sf/fc/1D/228/Grouped/228.json
       
   t2m:
-    description: t2m daily, ERA5 data
+    description: t2m-daily (167), 2 metre temperature, ERA5 data
     driver: zarr
     args:
       consolidated: False
