--- a/config/machines/levante/catalog/FESOM/test-pi.yaml
+++ b/config/machines/levante/catalog/FESOM/test-pi.yaml
@@ -32,5 +32,7 @@ sources:
       urlpath:
       - /work/bb1153/b382075/aqua/test_datasets/AQUA_tests/models/FESOM/short/temp.fesom.1985.nc
       - /work/bb1153/b382075/aqua/test_datasets/AQUA_tests/models/FESOM/short/temp.fesom.1986.nc
+      - /work/bb1153/b382075/aqua/test_datasets/AQUA_tests/models/FESOM/short/w.fesom.1985.nc
+      - /work/bb1153/b382075/aqua/test_datasets/AQUA_tests/models/FESOM/short/w.fesom.1986.nc
     description: original 3d output
     driver: netcdf
