--- a/config/machines/levante/catalog/FESOM/tco2559-ng5.yaml
+++ b/config/machines/levante/catalog/FESOM/tco2559-ng5.yaml
@@ -317,70 +317,79 @@ sources:
       urlpath:
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/01_20Jan-31Jan2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/01_20Jan-31Jan2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/01_20Jan-31Jan2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/01_20Jan-31Jan2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/01_20Jan-31Jan2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/02_01Feb-29Feb2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/02_01Feb-29Feb2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/02_01Feb-29Feb2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/02_01Feb-29Feb2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/02_01Feb-29Feb2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/03_01Mar-31Mar2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/03_01Mar-31Mar2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/03_01Mar-31Mar2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/03_01Mar-31Mar2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/03_01Mar-31Mar2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/04_01Apr-30Apr2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/04_01Apr-30Apr2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/04_01Apr-30Apr2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/04_01Apr-30Apr2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/04_01Apr-30Apr2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/05_01May-31May2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/05_01May-31May2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/05_01May-31May2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/05_01May-31May2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/05_01May-31May2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/06_01Jun-30Jun2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/06_01Jun-30Jun2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/06_01Jun-30Jun2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/06_01Jun-30Jun2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/06_01Jun-30Jun2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/07_01Jul-31Jul2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/07_01Jul-31Jul2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/07_01Jul-31Jul2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/07_01Jul-31Jul2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/07_01Jul-31Jul2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_01Aug-10Aug2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_01Aug-10Aug2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_01Aug-10Aug2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_01Aug-10Aug2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_01Aug-10Aug2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_11Aug-31Aug2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_11Aug-31Aug2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_11Aug-31Aug2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_11Aug-31Aug2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_11Aug-31Aug2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/09_01Sep-30Sep2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/09_01Sep-30Sep2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/09_01Sep-30Sep2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/09_01Sep-30Sep2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/09_01Sep-30Sep2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/10_01Oct-31Oct2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/10_01Oct-31Oct2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/10_01Oct-31Oct2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/10_01Oct-31Oct2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/10_01Oct-31Oct2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/11_01Nov-30Nov2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/11_01Nov-30Nov2020_fesom/temp.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/11_01Nov-30Nov2020_fesom/u.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/11_01Nov-30Nov2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/11_01Nov-30Nov2020_fesom/w.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/12_01Dec-31Dec2020_fesom/salt.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/12_01Dec-31Dec2020_fesom/temp.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/12_01Dec-31Dec2020_fesom/w.fesom.2020.nc
+    description: original 3d output for variables depending on nod2
+    driver: netcdf
+  original_3d_elem:
+    args:
+      chunks:
+        nz: 1
+        nz1: 1
+        time: 1
+      urlpath:
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/01_20Jan-31Jan2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/01_20Jan-31Jan2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/02_01Feb-29Feb2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/02_01Feb-29Feb2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/03_01Mar-31Mar2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/03_01Mar-31Mar2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/04_01Apr-30Apr2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/04_01Apr-30Apr2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/05_01May-31May2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/05_01May-31May2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/06_01Jun-30Jun2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/06_01Jun-30Jun2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/07_01Jul-31Jul2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/07_01Jul-31Jul2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_01Aug-10Aug2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_01Aug-10Aug2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_11Aug-31Aug2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/08_11Aug-31Aug2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/09_01Sep-30Sep2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/09_01Sep-30Sep2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/10_01Oct-31Oct2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/10_01Oct-31Oct2020_fesom/v.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/11_01Nov-30Nov2020_fesom/u.fesom.2020.nc
+      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/11_01Nov-30Nov2020_fesom/v.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/12_01Dec-31Dec2020_fesom/u.fesom.2020.nc
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/12_01Dec-31Dec2020_fesom/v.fesom.2020.nc
-      - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/12_01Dec-31Dec2020_fesom/w.fesom.2020.nc
-    description: original 3d output
+    description: original 3d output for variables depending on elem
     driver: netcdf
   lra-r100-mon:
     driver: netcdf
