--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -1,6 +1,6 @@
 weights:
    path: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/weights
-   template: weights_{model}_{exp}_{source}_z{zoom}_{method}_{target}_l{level}.nc
+   template: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
 
 areas:
    path: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/areas
