--- a/config/machines/ci/regrid.yaml
+++ b/config/machines/ci/regrid.yaml
@@ -1,6 +1,6 @@
 weights:
    path: ./AQUA_tests/weights
-   template: weights_{model}_{exp}_{source}_z{zoom}_{method}_{target}_l{level}.nc
+   template: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
 
 areas:
    path: ./AQUA_tests/weights
