--- a/config/machines/levante/catalog/ICON/main.yaml
+++ b/config/machines/levante/catalog/ICON/main.yaml
@@ -5,12 +5,12 @@ sources:
     args:
         path: "{{CATALOG_DIR}}/ngc2009.yaml"
   ngc3026:
-    description: 5km coupled run, intermediate ICON nextGEMS C23run
+    description: 5km coupled run, 1-year intermediate ICON nextGEMS C3 run
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/ngc3026.yaml"
   ngc3028:
-    description: 5km coupled run, intermediate ICON nextGEMS C3 run
+    description: 5km coupled run, 5-year intermediate ICON nextGEMS C3 run
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/ngc3028.yaml"
