--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -249,7 +249,11 @@ source_grids:
     era5:
       default:
         path: /work/bb1153/b382075/nextgems/grids/n320_unstructured.nc
-        space_coord: ["values"]
+        space_coord: ["values"]  
+    era5-aqua:
+      default:
+        path: /work/bb1153/b382076/ERA5/grids/r025_grid.nc
+        space_coord: ["lon", "lat"]
 
   OSI-SAF:
     osi-450:
